Added Simple ControlsFX List Selection View Sample